<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.UserDetailFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="400dp">

        <ProgressBar
            android:id="@+id/progress_bar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.cardview.widget.CardView
            android:id="@+id/card_view"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginTop="8dp"
            app:cardCornerRadius="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/img_user_avatar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/describe_user_image"
                tools:src="@tools:sample/avatars"/>

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/tv_detail_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textSize="12sp"
            android:textStyle="italic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/card_view"
            tools:text="@string/name_placeholder"/>

        <TextView
            android:id="@+id/tv_detail_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_detail_username"
            tools:text="@string/name_placeholder"/>

        <TextView
            android:id="@+id/tv_detail_company"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:textSize="13sp"
            android:gravity="center"
            android:drawablePadding="4dp"
            app:drawableStartCompat="@drawable/ic_company_black_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_detail_name"
            tools:text="@string/company"/>

        <TextView
            android:id="@+id/tv_detail_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:textSize="13sp"
            android:gravity="center"
            android:drawablePadding="4dp"
            app:drawableStartCompat="@drawable/ic_location_black_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_detail_company"
            tools:text="@string/location"/>

        <TextView
            android:id="@+id/tv_label_repository"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:textStyle="bold"
            android:text="@string/repository"
            app:layout_constraintEnd_toStartOf="@+id/tv_label_following"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tv_label_following" />

        <TextView
            android:id="@+id/tv_detail_repository"
            style="@style/CountInfo"
            app:layout_constraintEnd_toEndOf="@+id/tv_label_repository"
            app:layout_constraintStart_toStartOf="@+id/tv_label_repository"
            app:layout_constraintTop_toBottomOf="@+id/tv_label_repository"
            tools:text="@string/_999" />

        <TextView
            android:id="@+id/tv_label_following"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:textStyle="bold"
            android:text="@string/following"
            app:layout_constraintEnd_toStartOf="@+id/tv_label_followers"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/tv_label_repository"
            app:layout_constraintTop_toBottomOf="@+id/tv_detail_location" />

        <TextView
            android:id="@+id/tv_detail_following"
            style="@style/CountInfo"
            app:layout_constraintEnd_toEndOf="@+id/tv_label_following"
            app:layout_constraintStart_toStartOf="@+id/tv_label_following"
            app:layout_constraintTop_toBottomOf="@+id/tv_label_following"
            tools:text="@string/_999"/>

        <TextView
            android:id="@+id/tv_label_followers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:textStyle="bold"
            android:text="@string/followers"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/tv_label_following"
            app:layout_constraintTop_toTopOf="@+id/tv_label_following" />

        <TextView
            android:id="@+id/tv_detail_followers"
            style="@style/CountInfo"
            app:layout_constraintEnd_toEndOf="@+id/tv_label_followers"
            app:layout_constraintStart_toStartOf="@+id/tv_label_followers"
            app:layout_constraintTop_toBottomOf="@+id/tv_label_followers"
            tools:text="@string/_999"/>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_user_fav"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:contentDescription="@string/user_fav_button"
            app:layout_constraintBottom_toBottomOf="@+id/card_view"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/card_view"
            app:layout_constraintTop_toTopOf="@+id/card_view" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>